--- a/app/src/main/res/layout/style_container.xml
+++ b/app/src/main/res/layout/style_container.xml
@@ -622,7 +622,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.tabs.TabLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
@@ -632,7 +632,7 @@
             app:layout_constraintTop_toBottomOf="@+id/colorsLayout">
 
 
-        </com.google.android.material.tabs.TabLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
